2005/11/12	kaffeetisch

	* t/01.GtkWindow.t, t/GtkCellRenderer.t, t/GtkFileChooser.t,
	t/GtkIconView.t, t/GtkListStore.t, t/GtkNotebook.t,
	t/GtkSimpleList.t, t/GtkTreeView.t: Add the "sub" keyword to all
	blocks in run_main invocations to make older perl's happy.

	* xs/AtkHyperlink.xs: Only compile support for
	atk_hyperlink_is_selected_link if it's available.

	* xs/GdkColor.xs (gdk_color_new): Change the type of the arguments
	to guint16 to hush signedness warnings.

2005/11/01	rwmcfa1

	* t/GdkCairo.t: don't do Gtk -init, with no display (RPM build or
	otherwise) will break. remove -init added Gtk2->init_check to ok to go
	check

2005/10/18	kaffeetisch

	* Gtk2.pm, MANIFEST, Makefile.PL, NEWS, README: Unstable release
	1.110.

2005/10/18	kaffeetisch

	* xs/GtkClipboard.xs, xs/GtkToolbar.xs: Fix a signedness and a
	no-comma-after-last-enum-value warning.

2005/10/15	kaffeetisch

	* t/GdkX11.t, xs/GdkX11.xs: Patch from Marc Lehmann adds
	gdk_x11_screen_supports_net_wm_hint and gdk_net_wm_supports.  Also
	bind gdk_x11_get_server_time, gdk_x11_grab_server,
	gdk_x11_ungrab_server, gdk_x11_get_default_screen,
	gdk_x11_register_standard_event_type,
	gdk_x11_window_move_to_current_desktop,
	gdk_x11_screen_get_screen_number,
	gdk_x11_screen_get_window_manager_name and
	gdk_x11_screen_supports_net_wm_hint while we're at it.

2005/10/13	muppetman

	* MANIFEST: update with missing entries.

	* pm/SimpleList.pm, pm/SimpleMenu.pm: add deprecation notices.

	* xs/GdkPixbufSimpleAnim.xs, t/GdkPixbufSimpleAnim.t, xs_files-2.8,
	maps-2.8, MANIFEST:  Bind and test GdkPixbufSimpleAnim.

2005/10/10	kaffeetisch

	Patch from Marc Lehmann:

	* t/GdkGC.t, xs/GdkGC.xs: Allow undef for the argument of
	Gtk2::Gdk::GC::set_clip_mask, set_clip_rectangle, and
	set_clip_region.

	* xs/GdkPixbuf.xs: Don't leak the return value of
	gdk_pixbuf_composite_color_simple.

2005/10/05	kaffeetisch

	Merge from stable-1-10:

	* NEWS: Add the 1.101 release notes.
